fix backend preprod bugs and deadlocks
